ingress/helloworld-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nodeport
  namespace: zach-test
spec:
  type: NodePort
  ports:
  - port: 3000
    nodePort: 30390
    protocol: TCP
    targetPort: 3000
  selector:
    app: helloworld-pod
