ingress/helloworld-ingress-1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: helloworld-ingress-1
   namespace: zach-test
spec:
   rules:
   - http:
       paths:
       - path: /
         backend:
           serviceName: helloworld-service
           servicePort: 3000
