ingress/helloworld-ingress-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: helloworld-ingress-2
   namespace: zach-test
spec:
   rules:
   - http:
       paths:
       - path: /helloworld-ingress
         backend:
           serviceName: helloworld-service
           servicePort: 3000
