ingress/helloworld-ingress-4.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: helloworld-ingress-4
   namespace: zach-test
spec:
   rules:
   - host: helloworld.example.com
     http:
       paths:
       - path: /hello
         backend:
           serviceName: helloworld-service
           servicePort: 3000
