ingress/helloworld-ingress-single.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: helloworld-ingress
   namespace: zach-test
spec:
  backend:
    serviceName: helloworld-service
    servicePort: 80
